--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
 	</header>
 
 	<main>
-		<div ng-view="">
-			<p>Loading...</p>
-		</div>
+		<p> {{ quote.data }} </p>
 	</main>
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-route.min.js"></script>
-	<script src="script.js"></script>
+	<script src="script/app.js"></script>
+	<script src="script/controller.js"></script>
+	<script src="script/service.js"></script>
 </body>
 </html>
