--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,19 @@
 			</ul>
 		</nav>
 	</header>
+	
+	<div ng-view>
+	<p>Loading...</p>
+	</div>
 
 	<main>
-		<p> {{ quote.data }} </p>
+		<p> {{ rachelQuote.data }} </p>
+		<p> {{ rossQuote.data }} </p>
+		<p> {{ monicaQuote.data }} </p>
+		<p> {{ chandlerQuote.data }} </p>
+		<p> {{ phoebeQuote.data }} </p>
+		<p> {{ joeyQuote.data }} </p>
 	</main>
-	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-route.min.js"></script>
