--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 		<h1>Friends Random Quote Generator</h1>
 		<nav>
 			<ul>
-				<li><a href="/rachel">Rachel</a></li>
-				<li><a href="/ross">Ross</a></li>
-				<li><a href="/monica">Monica</a></li>
-				<li><a href="/chandler">Chandler</a></li>
-				<li><a href="/phoebe">Phoebe</a></li>
-				<li><a href="/joey">Joey</a></li>
+				<li><a href="#!/rachel">Rachel</a></li>
+				<li><a href="#!/ross">Ross</a></li>
+				<li><a href="#!/monica">Monica</a></li>
+				<li><a href="#!/chandler">Chandler</a></li>
+				<li><a href="#!/phoebe">Phoebe</a></li>
+				<li><a href="#!/joey">Joey</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -25,6 +25,7 @@
 	<p>Loading...</p>
 	</div>
 
+<!--
 	<main>
 		<p> {{ rachelQuote.data }} </p>
 		<p> {{ rossQuote.data }} </p>
@@ -33,6 +34,7 @@
 		<p> {{ phoebeQuote.data }} </p>
 		<p> {{ joeyQuote.data }} </p>
 	</main>
+-->
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-route.min.js"></script>
