styling and images

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Random Quote Generator</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
 	<link href="main.css" type="text/css" rel="stylesheet">
 </head>
 <body ng-app="quoteMod" ng-controller="quoteCtrl">
@@ -25,17 +26,6 @@
 	<p>Loading...</p>
 	</div>
 
-<!--
-	<main>
-		<p> {{ rachelQuote.data }} </p>
-		<p> {{ rossQuote.data }} </p>
-		<p> {{ monicaQuote.data }} </p>
-		<p> {{ chandlerQuote.data }} </p>
-		<p> {{ phoebeQuote.data }} </p>
-		<p> {{ joeyQuote.data }} </p>
-	</main>
--->
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-route.min.js"></script>
 	<script src="script/app.js"></script>
