--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body ng-app="quoteMod" ng-controller="quoteCtrl">
 	<header>
-		<h1>Friends Random Quote Generator</h1>
+		<a href="/"><h1>The One with All the Quotes</h1></a>
 		<nav>
 			<ul>
 				<li><a href="#!/rachel">Rachel</a></li>
